fix: configure CHP to handle IPv4 and/or IPv6

--- a/jupyterhub/templates/proxy/deployment.yaml
+++ b/jupyterhub/templates/proxy/deployment.yaml
@@ -71,8 +71,8 @@ spec:
           {{- $hubHost := printf "http://%s:$(%s_SERVICE_PORT)" (include "jupyterhub.hub.fullname" .) $hubNameAsEnv }}
           command:
             - configurable-http-proxy
-            - "--ip=::"
-            - "--api-ip=::"
+            - "--ip="
+            - "--api-ip="
             - --api-port=8001
             - --default-target={{ .Values.proxy.chp.defaultTarget | default $hubHost }}
             - --error-target={{ .Values.proxy.chp.errorTarget | default (printf "%s/hub/error" $hubHost) }}
