--- a/.github/workflows/test-docker-build.yaml
+++ b/.github/workflows/test-docker-build.yaml
@@ -28,7 +28,7 @@ jobs:
   build_images:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2'
+      - uses: actions/checkout@v2
         with:
           # chartpress requires git history to set chart version and image tags
           # correctly
