add templateVars and templatePaths while checking for linting

--- a/tools/templates/lint-and-validate-values.yaml
+++ b/tools/templates/lint-and-validate-values.yaml
@@ -122,6 +122,11 @@ hub:
   extraContainers: []
   extraVolumes: []
   extraVolumeMounts: []
+  templatePaths:
+    - /etc/jupyterhub/templates
+  templateVars:
+    announcement: 'Some text'
+    another_announcement: 'Some more text'
   resources: &resources
     requests:
       cpu: 100m
