--- a/jupyterhub/templates/hub/netpol.yaml
+++ b/jupyterhub/templates/hub/netpol.yaml
@@ -56,7 +56,7 @@ spec:
 
     {{- with .Values.hub.networkPolicy.ingress }}
     # depends, but default is nothing --> hub
-    {{- . | toYaml | trimSuffix "\n" | nindent 4 }}
+    {{- . | toYaml | nindent 4 }}
     {{- end }}
 
   egress:
@@ -86,6 +86,6 @@ spec:
 
     {{- with .Values.hub.networkPolicy.egress }}
     # hub --> depends, but the default is everything
-    {{- . | toYaml | trimSuffix "\n" | nindent 4 }}
+    {{- . | toYaml | nindent 4 }}
     {{- end }}
 {{- end }}
