--- a/jupyterhub/templates/hub/pvc.yaml
+++ b/jupyterhub/templates/hub/pvc.yaml
@@ -7,18 +7,18 @@ metadata:
     {{- include "jupyterhub.labels" . | nindent 4 }}
   {{- with .Values.hub.db.pvc.annotations }}
   annotations:
-    {{- . | toYaml | trimSuffix "\n" | nindent 4 }}
+    {{- . | toYaml | nindent 4 }}
   {{- end }}
 spec:
   {{- with .Values.hub.db.pvc.selector }}
   selector:
-    {{- . | toYaml | trimSuffix "\n" | nindent 4 }}
+    {{- . | toYaml | nindent 4 }}
   {{- end }}
   {{- if typeIs "string" .Values.hub.db.pvc.storageClassName }}
   storageClassName: {{ .Values.hub.db.pvc.storageClassName | quote }}
   {{- end }}
   accessModes:
-    {{- .Values.hub.db.pvc.accessModes | toYaml | trimSuffix "\n" | nindent 4 }}
+    {{- .Values.hub.db.pvc.accessModes | toYaml | nindent 4 }}
   resources:
     requests:
       storage: {{ .Values.hub.db.pvc.storage | quote }}
