--- a/jupyterhub/templates/proxy/autohttps/deployment.yaml
+++ b/jupyterhub/templates/proxy/autohttps/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         {{- include "jupyterhub.matchLabels" . | nindent 8 }}
         hub.jupyter.org/network-access-proxy-http: "true"
         {{- with .Values.proxy.traefik.labels }}
-        {{- . | toYaml | trimSuffix "\n" | nindent 8 }}
+        {{- . | toYaml | nindent 8 }}
         {{- end }}
       annotations:
         # Only force a restart through a change to this checksum when the static
@@ -46,7 +46,7 @@ spec:
           configMap:
             name: {{ include "jupyterhub.autohttps.fullname" . }}
         {{- with .Values.proxy.traefik.extraVolumes }}
-        {{- . | toYaml | trimSuffix "\n" | nindent 8 }}
+        {{- . | toYaml | nindent 8 }}
         {{- end }}
       {{- with include "jupyterhub.imagePullSecrets" (dict "root" . "image" .Values.proxy.traefik.image) }}
       imagePullSecrets: {{ . }}
@@ -74,7 +74,7 @@ spec:
               mountPath: /etc/acme
           {{- with .Values.proxy.secretSync.containerSecurityContext }}
           securityContext:
-            {{- . | toYaml | trimSuffix "\n" | nindent 12 }}
+            {{- . | toYaml | nindent 12 }}
           {{- end }}
       containers:
         - name: traefik
@@ -84,7 +84,7 @@ spec:
           {{- end }}
           {{- with .Values.proxy.traefik.resources }}
           resources:
-            {{- . | toYaml | trimSuffix "\n" | nindent 12 }}
+            {{- . | toYaml | nindent 12 }}
           {{- end }}
           ports:
             - name: http
@@ -92,7 +92,7 @@ spec:
             - name: https
               containerPort: 8443
             {{- with .Values.proxy.traefik.extraPorts }}
-            {{- . | toYaml | trimSuffix "\n" | nindent 12 }}
+            {{- . | toYaml | nindent 12 }}
             {{- end }}
           volumeMounts:
             - name: traefik-config
@@ -100,7 +100,7 @@ spec:
             - name: certificates
               mountPath: /etc/acme
             {{- with .Values.proxy.traefik.extraVolumeMounts }}
-            {{- . | toYaml | trimSuffix "\n" | nindent 12 }}
+            {{- . | toYaml | nindent 12 }}
             {{- end }}
           {{- with .Values.proxy.traefik.extraEnv }}
           env:
@@ -108,7 +108,7 @@ spec:
           {{- end }}
           {{- with .Values.proxy.traefik.containerSecurityContext }}
           securityContext:
-            {{- . | toYaml | trimSuffix "\n" | nindent 12 }}
+            {{- . | toYaml | nindent 12 }}
           {{- end }}
         - name: secret-sync
           image: "{{ .Values.proxy.secretSync.image.name }}:{{ .Values.proxy.secretSync.image.tag }}"
@@ -133,9 +133,9 @@ spec:
               mountPath: /etc/acme
           {{- with .Values.proxy.secretSync.containerSecurityContext }}
           securityContext:
-            {{- . | toYaml | trimSuffix "\n" | nindent 12 }}
+            {{- . | toYaml | nindent 12 }}
           {{- end }}
       {{- with .Values.proxy.traefik.extraPodSpec }}
-      {{- . | toYaml | trimSuffix "\n" | nindent 6 }}
+      {{- . | toYaml | nindent 6 }}
       {{- end }}
 {{- end }}
