--- a/jupyterhub/templates/proxy/autohttps/service.yaml
+++ b/jupyterhub/templates/proxy/autohttps/service.yaml
@@ -8,11 +8,11 @@ metadata:
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
     {{- with .Values.proxy.service.labels }}
-    {{- . | toYaml | trimSuffix "\n" | nindent 4 }}
+    {{- . | toYaml | nindent 4 }}
     {{- end }}
   {{- with .Values.proxy.service.annotations }}
   annotations:
-    {{- . | toYaml | trimSuffix "\n" | nindent 4 }}
+    {{- . | toYaml | nindent 4 }}
   {{- end }}
 spec:
   type: ClusterIP
