--- a/jupyterhub/templates/proxy/netpol.yaml
+++ b/jupyterhub/templates/proxy/netpol.yaml
@@ -80,7 +80,7 @@ spec:
 
     {{- with .Values.proxy.chp.networkPolicy.ingress}}
     # depends, but default is nothing --> proxy
-    {{- . | toYaml | trimSuffix "\n" | nindent 4 }}
+    {{- . | toYaml | nindent 4 }}
     {{- end }}
 
   egress:
@@ -111,6 +111,6 @@ spec:
 
     {{- with .Values.proxy.chp.networkPolicy.egress }}
     # proxy --> depends, but the default is everything
-    {{- . | toYaml | trimSuffix "\n" | nindent 4 }}
+    {{- . | toYaml | nindent 4 }}
     {{- end }}
 {{- end }}
