--- a/jupyterhub/templates/scheduling/user-scheduler/configmap.yaml
+++ b/jupyterhub/templates/scheduling/user-scheduler/configmap.yaml
@@ -17,5 +17,5 @@ data:
     profiles:
       - schedulerName: {{ include "jupyterhub.user-scheduler.fullname" . }}
         plugins:
-          {{- .Values.scheduling.userScheduler.plugins | toYaml | trimSuffix "\n" | nindent 10 }}
+          {{- .Values.scheduling.userScheduler.plugins | toYaml | nindent 10 }}
 {{- end }}
