--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,14 @@
 #   pre-commit run --config .pre-commit-config-shellcheck.yaml --all-files
 #
 repos:
+  # Autoformat: Python code, syntax patterns are modernized
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.26.0
+    hooks:
+      - id: pyupgrade
+        args:
+          - --py36-plus
+
   # Autoformat: Python code
   - repo: https://github.com/psf/black
     rev: 21.9b0
