--- a/images/hub/requirements.txt
+++ b/images/hub/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    ./dependencies freeze --upgrade
 #
-alembic==1.6.5
+alembic==1.7.3
     # via jupyterhub
 async-generator==1.10
     # via
@@ -24,13 +24,13 @@ certifi==2021.5.30
     #   requests
 certipy==0.1.3
     # via jupyterhub
-cffi==1.14.5
+cffi==1.14.6
     # via
     #   bcrypt
     #   cryptography
-chardet==4.0.0
+charset-normalizer==2.0.6
     # via requests
-cryptography==3.4.7
+cryptography==3.4.8
     # via pyopenssl
 entrypoints==0.3
     # via jupyterhub
@@ -38,14 +38,14 @@ escapism==1.0.1
     # via
     #   jupyterhub-kubespawner
     #   jupyterhub-ltiauthenticator
-google-auth==1.31.0
+google-auth==2.1.0
     # via kubernetes
-greenlet==1.1.0
+greenlet==1.1.1
     # via sqlalchemy
-idna==2.10
+idna==3.2
     # via requests
-ipython-genutils==0.2.0
-    # via traitlets
+importlib-resources==5.2.2
+    # via alembic
 jinja2==3.0.1
     # via
     #   jupyterhub
@@ -54,16 +54,6 @@ jsonschema==3.2.0
     # via jupyter-telemetry
 jupyter-telemetry==0.1.0
     # via jupyterhub
-jupyterhub==1.4.2
-    # via
-    #   -r requirements.in
-    #   jupyterhub-firstuseauthenticator
-    #   jupyterhub-kubespawner
-    #   jupyterhub-ldapauthenticator
-    #   jupyterhub-ltiauthenticator
-    #   jupyterhub-nativeauthenticator
-    #   nullauthenticator
-    #   oauthenticator
 jupyterhub-firstuseauthenticator==0.14.1
     # via -r requirements.in
 jupyterhub-hmacauthenticator==1.0
@@ -80,11 +70,21 @@ jupyterhub-nativeauthenticator==0.0.7
     # via -r requirements.in
 jupyterhub-tmpauthenticator==0.6
     # via -r requirements.in
-kubernetes==17.17.0
+jupyterhub==2.0.0b1
+    # via
+    #   -r requirements.in
+    #   jupyterhub-firstuseauthenticator
+    #   jupyterhub-kubespawner
+    #   jupyterhub-ldapauthenticator
+    #   jupyterhub-ltiauthenticator
+    #   jupyterhub-nativeauthenticator
+    #   nullauthenticator
+    #   oauthenticator
+kubernetes==18.20.0
     # via jupyterhub-kubespawner
-ldap3==2.9
+ldap3==2.9.1
     # via jupyterhub-ldapauthenticator
-mako==1.1.4
+mako==1.1.5
     # via alembic
 markupsafe==2.0.1
     # via
@@ -104,6 +104,8 @@ oauthlib==3.1.1
     #   requests-oauthlib
 onetimepass==1.0.1
     # via jupyterhub-nativeauthenticator
+packaging==21.0
+    # via jupyterhub
 pamela==1.0.0
     # via jupyterhub
 prometheus-client==0.11.0
@@ -112,13 +114,13 @@ psycopg2-binary==2.9.1
     # via -r requirements.in
 py-spy==0.3.9
     # via -r requirements.in
+pyasn1-modules==0.2.8
+    # via google-auth
 pyasn1==0.4.8
     # via
     #   ldap3
     #   pyasn1-modules
     #   rsa
-pyasn1-modules==0.2.8
-    # via google-auth
 pycparser==2.20
     # via cffi
 pycurl==7.44.1
@@ -131,17 +133,16 @@ pymysql==1.0.2
     # via -r requirements.in
 pyopenssl==20.0.1
     # via certipy
-pyrsistent==0.17.3
+pyparsing==2.4.7
+    # via packaging
+pyrsistent==0.18.0
     # via jsonschema
-python-dateutil==2.8.1
+python-dateutil==2.8.2
     # via
-    #   alembic
     #   jupyterhub
     #   jupyterhub-idle-culler
     #   kubernetes
-python-editor==1.0.4
-    # via alembic
-python-json-logger==2.0.1
+python-json-logger==2.0.2
     # via jupyter-telemetry
 python-slugify==5.0.2
     # via jupyterhub-kubespawner
@@ -149,39 +150,38 @@ pyyaml==5.4.1
     # via
     #   jupyterhub-kubespawner
     #   kubernetes
-requests==2.25.1
+requests-oauthlib==1.3.0
+    # via
+    #   kubernetes
+    #   mwoauth
+requests==2.26.0
     # via
     #   jupyterhub
     #   kubernetes
     #   mwoauth
     #   requests-oauthlib
-requests-oauthlib==1.3.0
-    # via
-    #   kubernetes
-    #   mwoauth
 rsa==4.7.2
     # via google-auth
-ruamel.yaml==0.17.9
-    # via jupyter-telemetry
-ruamel.yaml.clib==0.2.2
+ruamel.yaml.clib==0.2.6
     # via ruamel.yaml
+ruamel.yaml==0.17.16
+    # via jupyter-telemetry
 six==1.16.0
     # via
     #   bcrypt
-    #   google-auth
     #   jsonschema
     #   kubernetes
     #   mwoauth
     #   onetimepass
     #   pyopenssl
     #   python-dateutil
-sqlalchemy==1.4.18
+sqlalchemy-cockroachdb==1.4.0
+    # via -r requirements.in
+sqlalchemy==1.4.23
     # via
     #   alembic
     #   jupyterhub
     #   sqlalchemy-cockroachdb
-sqlalchemy-cockroachdb==1.4.0
-    # via -r requirements.in
 statsd==3.3.0
     # via -r requirements.in
 text-unidecode==1.3
@@ -191,18 +191,20 @@ tornado==6.1
     #   jupyterhub
     #   jupyterhub-idle-culler
     #   jupyterhub-ldapauthenticator
-traitlets==5.0.5
+traitlets==5.1.0
     # via
     #   jupyter-telemetry
     #   jupyterhub
     #   jupyterhub-ldapauthenticator
-urllib3==1.26.5
+urllib3==1.26.6
     # via
     #   jupyterhub-kubespawner
     #   kubernetes
     #   requests
-websocket-client==1.1.0
+websocket-client==1.2.1
     # via kubernetes
+zipp==3.5.0
+    # via importlib-resources
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
