--- a/images/singleuser-sample/requirements.txt
+++ b/images/singleuser-sample/requirements.txt
@@ -1,5 +1,5 @@
 # This file is automatically maintained by Dependabot, as configured in
 # .github/dependabot.yaml.
 
-jupyterhub==1.4.2
+jupyterhub==2.0.0b1
 nbgitpuller==1.0.2
