ci: use PVCs when testing upgrades
This ensures we're testing whether persistent data (like the database) is actually upgraded

--- a/.github/workflows/test-chart.yaml
+++ b/.github/workflows/test-chart.yaml
@@ -218,6 +218,15 @@ jobs:
           timeout: 150
           max-restarts: 1
 
+      - name: Set matrix dependent Helm arguments
+        run: |
+          if [ "${{ matrix.test }}" = "upgrade" ]; then
+            HELM_EXTRA_ARGS="--set hub.db.type=sqlite-pvc --set singleuser.storage.type=dynamic"
+          else
+            HELM_EXTRA_ARGS=""
+          fi
+          echo HELM_EXTRA_ARGS="$HELM_EXTRA_ARGS" >> $GITHUB_ENV
+
       - name: "(Upgrade) Install ${{ matrix.upgrade-from }} chart"
         if: matrix.test == 'upgrade'
         run: |
@@ -233,7 +242,7 @@ jobs:
           #
           #        https://github.com/helm/helm/issues/9244
           cd ci
-          helm install jupyterhub --repo https://jupyterhub.github.io/helm-chart/ jupyterhub --values ../dev-config.yaml --version=$UPGRADE_FROM_VERSION ${{ matrix.upgrade-from-extra-args }}
+          helm install jupyterhub --repo https://jupyterhub.github.io/helm-chart/ jupyterhub --values ../dev-config.yaml --version=$UPGRADE_FROM_VERSION ${{ matrix.upgrade-from-extra-args }} $HELM_EXTRA_ARGS
 
       - name: "(Upgrade) Install helm diff"
         if: matrix.test == 'upgrade'
@@ -266,6 +275,7 @@ jobs:
           echo
 
           helm diff upgrade --install jupyterhub ./jupyterhub --values dev-config.yaml \
+              $HELM_EXTRA_ARGS \
               --show-secrets \
               --context=3 \
               --post-renderer=ci/string-replacer.sh
@@ -291,7 +301,7 @@ jobs:
 
       - name: "Install local chart"
         run: |
-          helm upgrade --install jupyterhub ./jupyterhub --values dev-config.yaml ${{ matrix.local-chart-extra-args }}
+          helm upgrade --install jupyterhub ./jupyterhub --values dev-config.yaml ${{ matrix.local-chart-extra-args }} $HELM_EXTRA_ARGS
 
       - name: "Await local chart"
         uses: jupyterhub/action-k8s-await-workloads@v1
