--- a/dev-config-local-chart-extra-config.yaml
+++ b/dev-config-local-chart-extra-config.yaml
@@ -11,13 +11,11 @@
 hub:
   # FIXME: move loadRoles to dev-config.yaml after 2.0.0 is released.
   loadRoles:
-    test-role-1:
-      description: Access to users' information and group membership
-      scopes: [users, groups]
-      users: [cyclops, gandalf]
-      services: [test]
-      groups: []
-    test-role-2-explicit-name:
+    test-scoped-access:
+      description: Used to JupyterHub 2.0.0+ RBAC scoped access, currently to the /hub/api/info endpoint via read:hub.
+      scopes: [read:hub]
+      services: [test-with-scoped-access]
+    test-role-with-explicit-name:
       name: test-role-2
       description: Access to users' information and group membership
       scopes: [users, groups]
