--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,11 @@ jobs:
       - run:
           command: |
             export KUBECONFIG="$HOME/.kube/config"
-            helm upgrade --install jupyterhub ./jupyterhub --values dev-config.yaml  --values dev-config-arm.yaml --wait
+            helm upgrade --install jupyterhub ./jupyterhub \
+                --wait \
+                --values dev-config.yaml \
+                --values dev-config-arm.yaml \
+                --values dev-config-local-chart-extra-config.yaml
           name: Install local chart
 
       - run:
